# ai-article-generator

./: .gitignore  pyproject.toml
1_devops/: table.sql
app/: config.py  deps.py  exceptions.py  main.py
app/constants/: __init__.py  article.py  prompt.py  user.py
app/models/: user.py
app/routers/: __init__.py  user.py
app/schemas/: common.py
app/service/: user_service.py
app/services/: __init__.py  user_service.py
app/utils/: session.py
