[project]
name = "ai-article-generator"
version = "0.1.0"
description = "backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.36",
    "pymysql==1.1.1",
    "cryptography==43.0.3",
    "databases[mysql]==0.9.0",
    "redis==5.2.0",
    "aioredis==2.0.1",
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "passlib[bcrypt]==1.7.4",
    "python-dateutil==2.9.0.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
